add main (1st section layout)

--- a/index.html
+++ b/index.html
@@ -62,7 +62,43 @@
 
         <main> <!--Inizio Main-->
 
+            <section id="utilities"> <!--First Section-->
 
+                <div class="cards container flex">
+
+                    <div class="card">
+
+                        content
+
+                    </div>
+
+                    <div class="card">
+
+                        content
+
+                    </div>
+
+                    <div class="card">
+
+                        content
+
+                    </div>
+
+                    <div class="card">
+
+                        content
+
+                    </div>
+
+                    <div class="card">
+
+                        content
+
+                    </div>
+
+                </div>
+
+            </section>
 
         </main> <!--Fine Main-->
 
