--- a/index.html
+++ b/index.html
@@ -100,6 +100,26 @@
 
             </section>
 
+            <section id="planning"> <!--Second Section-->
+
+                <div class="cont-planning container flex">
+
+                    <div class="planning-card">
+
+                        content
+
+                    </div>
+
+                    <div class="planning-card">
+
+                        content
+
+                    </div>
+
+                </div>
+
+            </section>
+
         </main> <!--Fine Main-->
 
         <footer> <!--Inizio Footer-->
