add main (3rd section layout)

--- a/index.html
+++ b/index.html
@@ -120,6 +120,62 @@
 
             </section>
 
+            <section id="testimonials"> <!--Third Section-->
+
+                <div class="cont-testimonials container">
+
+                    <div class="text">
+                        testo
+                    </div>
+
+                    <div class="text">
+                        testo
+                    </div>
+
+                    <div class="text">
+                        testo
+                    </div>
+
+                    <div class="card-testim flex">
+
+                        <div class="img-card">
+                            img
+                        </div>
+
+                        <div class="text">
+                            testo
+                        </div>
+
+                    </div>
+
+                    <div class="card-testim flex">
+
+                        <div class="img-card">
+                            img
+                        </div>
+
+                        <div class="text">
+                            testo
+                        </div>
+
+                    </div>
+
+                    <div class="card-testim flex">
+
+                        <div class="img-card">
+                            img
+                        </div>
+
+                        <div class="text">
+                            testo
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </section>
+
         </main> <!--Fine Main-->
 
         <footer> <!--Inizio Footer-->
