--- a/index.html
+++ b/index.html
@@ -176,6 +176,46 @@
 
             </section>
 
+            <section id="benefits"> <!--Fourth Section-->
+
+                <div class="container">
+
+                    <div class="text">
+                        text
+                    </div>
+
+                    <div class="cont-benefits flex">
+
+                        <div class="card">
+                            content
+                        </div>
+
+                        <div class="card">
+                            content
+                        </div>
+
+                        <div class="card">
+                            content
+                        </div>
+
+                        <div class="card">
+                            content
+                        </div>
+
+                        <div class="card">
+                            content
+                        </div>
+
+                        <div class="card">
+                            content
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </section>
+
         </main> <!--Fine Main-->
 
         <footer> <!--Inizio Footer-->
