add main (5th section layout)

--- a/index.html
+++ b/index.html
@@ -216,6 +216,28 @@
 
             </section>
 
+            <section id="about-us"> <!--Fifth Section-->
+
+                <div class="container">
+
+                    <div class="cont-fifth-sec flex">
+
+                        <div class="text">
+                            content
+
+                        </div>
+
+                        <div class="text">
+                            content
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </section>
+
         </main> <!--Fine Main-->
 
         <footer> <!--Inizio Footer-->
