add main (6th section layout)

--- a/index.html
+++ b/index.html
@@ -238,6 +238,44 @@
 
             </section>
 
+            <section id="get-started"> <!--Sixth Section-->
+
+                <div class="cont-get-started container">
+
+                    <div class="text">
+
+                        text
+
+                    </div>
+
+                    <div class="text">
+
+                        text
+
+                    </div>
+
+                    <div class="text">
+
+                        text
+
+                    </div>
+
+                    <div class="text">
+
+                        text
+
+                    </div>
+
+                    <div class="text">
+
+                        <a href="#">Link</a>
+
+                    </div>
+
+                </div>
+
+            </section>
+
         </main> <!--Fine Main-->
 
         <footer> <!--Inizio Footer-->
