add footer (layout)

--- a/index.html
+++ b/index.html
@@ -280,7 +280,17 @@
 
         <footer> <!--Inizio Footer-->
 
+            <div class="text">
 
+                text
+
+            </div>
+
+            <div class="text">
+
+                text
+
+            </div>
 
         </footer> <!--Fine Footer-->
         
