add header (desktop version completed)

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
 
                 <div class="logo-header">
 
-                    LOGO
+                    <a href="index.html">
+
+                        <img src="img/logo.png" alt="">
+                        
+                    </a>
 
                 </div>
 
@@ -33,23 +37,23 @@
                     <ul class="flex">
 
                         <li>
-                            <a href="#">Link</a>
+                            <a href="#">Planning</a>
                         </li>
 
                         <li>
-                            <a href="#">Link</a>
+                            <a href="#">Testimonials</a>
                         </li>
 
                         <li>
-                            <a href="#">Link</a>
+                            <a href="#">Features</a>
                         </li>
 
                         <li>
-                            <a href="#">Link</a>
+                            <a href="#">About Us</a>
                         </li>
 
                         <li>
-                            <a href="#">Link</a>
+                            <a class="button" href="#">Get Started</a>
                         </li>
 
                     </ul>
