add main (1st section desktop version)

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <!--Fontawesome-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
         <!--Font-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +30,7 @@
                     <a href="index.html">
 
                         <img src="img/logo.png" alt="">
-                        
+
                     </a>
 
                 </div>
@@ -70,33 +73,63 @@
 
                 <div class="cards container flex">
 
-                    <div class="card">
+                    <div class="card flex">
 
-                        content
+                        <div class="card-text">
 
-                    </div>
+                            <h2>Get a demo application</h2>
 
-                    <div class="card">
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi suscipit quas itaque alias voluptas, ab beatae laborum odio aspernatur ut.</p>
 
-                        content
+                            <a class="button" href="#"><i class="fa-brands fa-apple"></i> App Store</a>
 
-                    </div>
+                        </div>
 
-                    <div class="card">
+                        <div class="card-img flex">
 
-                        content
+                            <img src="img/phone.png" alt="">
 
-                    </div>
-
-                    <div class="card">
-
-                        content
+                        </div>
 
                     </div>
 
                     <div class="card">
 
-                        content
+                        <i class="fa-solid fa-file-code icon"></i>
+
+                        <h2>Clean Code</h2>
+
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi suscipit quas itaque alias voluptas, ab beatae laborum odio aspernatur ut.</p>
+
+                    </div>
+
+                    <div class="card">
+
+                        <i class="fa-solid fa-compass-drafting icon"></i>
+
+                        <h2>Web Design</h2>
+
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi suscipit quas itaque alias voluptas, ab beatae laborum odio aspernatur ut.</p>
+
+                    </div>
+
+                    <div class="card">
+
+                        <i class="fa-solid fa-laptop-code icon"></i>
+
+                        <h2>Developement</h2>
+
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi suscipit quas itaque alias voluptas, ab beatae laborum odio aspernatur ut.</p>
+
+                    </div>
+
+                    <div class="card">
+
+                        <i class="fa-solid fa-bullhorn icon"></i>
+
+                        <h2>Branding</h2>
+
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi suscipit quas itaque alias voluptas, ab beatae laborum odio aspernatur ut.</p>
 
                     </div>
 
