add main (2nd section desktop)

--- a/index.html
+++ b/index.html
@@ -143,15 +143,29 @@
 
                     <div class="planning-card">
 
-                        content
+                        <img src="img/planning1.png" alt="">
+
+                        <h3>Strategic Planning</h3>
+
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis doloribus minima non quia libero quaerat fuga. Quo eius doloribus nihil omnis modi veritatis qui quos.</p>
 
                     </div>
 
-                    <div class="planning-card">
+                    <div class="planning-card2">
 
-                        content
+                        <img src="img/planning2.png" alt="">
 
-                    </div>
+                        <h3>App Developement</h3>
+
+                        <p><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, voluptatum commodi ipsa dolor est excepturi.</em></p>
+                        
+                        <div class="circle">
+
+                            <a href="#">
+                                <i class="fa-solid fa-arrow-down"></i>
+                            </a>
+
+                        </div>
 
                 </div>
 
