add main (5th section desktop)

--- a/index.html
+++ b/index.html
@@ -330,13 +330,27 @@
 
                     <div class="cont-fifth-sec flex">
 
-                        <div class="text">
-                            content
+                        <div class="fifth-sec-text">
+                            
+                            <h2>About Us</h2>
+
+                            <p id="f-sec-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos repudiandae at atque labore officiis omnis voluptatibus a numquam expedita dolores voluptates deserunt impedit ipsa eveniet quibusdam sequi, amet minima unde incidunt iste! Optio sit deserunt consectetur enim necessitatibus qui impedit ullam neque velit ipsam voluptatem in ab facere, reiciendis voluptas? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos repudiandae at atque labore officiis omnis voluptatibus a numquam expedita dolores voluptates deserunt impedit ipsa eveniet quibusdam sequi, amet minima unde incidunt iste! Optio sit deserunt consectetur enim necessitatibus qui impedit ullam neque velit ipsam voluptatem in ab facere, reiciendis voluptas?</p>
+
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos repudiandae at atque labore officiis omnis voluptatibus a numquam expedita dolores voluptates deserunt impedit ipsa eveniet quibusdam sequi, amet minima unde incidunt iste! Optio sit deserunt consectetur enim necessitatibus qui impedit ullam neque velit ipsam voluptatem in ab facere, reiciendis voluptas? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos repudiandae at atque labore officiis omnis voluptatibus a numquam expedita dolores voluptates deserunt impedit ipsa eveniet quibusdam sequi, amet minima unde incidunt iste! Optio sit deserunt consectetur enim necessitatibus qui impedit ullam neque velit ipsam voluptatem in ab facere, reiciendis voluptas?</p>
 
                         </div>
 
-                        <div class="text">
-                            content
+                        <div class="fifth-sec-img flex">
+
+                            <div class="img-card">
+                                
+                                <i class="fa-solid fa-quote-left q-mark-img"></i>
+
+                            </div>
+
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, optio.</p>
+
+                            <a class="button" href="#"><i class="fa-brands fa-linkedin"></i> FInd me on Linkedin</a>
 
                         </div>
 
