add main (6th section desktop)

--- a/index.html
+++ b/index.html
@@ -362,37 +362,19 @@
 
             <section id="get-started"> <!--Sixth Section-->
 
-                <div class="cont-get-started container">
+                <div class="cont-get-started txt-center container">
 
-                    <div class="text">
+                    <span>GET STARTED</span>
 
-                        text
+                    <h2>Simple, Transparent Pricing</h2>
 
-                    </div>
+                    <h3>It's Free!</h3>
 
-                    <div class="text">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi facere maiores provident eligendi, error dolorem molestiae ex?</p>
 
-                        text
+                    <a class="button" href="#">Get Started</a>
 
-                    </div>
-
-                    <div class="text">
-
-                        text
-
-                    </div>
-
-                    <div class="text">
-
-                        text
-
-                    </div>
-
-                    <div class="text">
-
-                        <a href="#">Link</a>
-
-                    </div>
+                    <p id="copy">Copyright 2021 Boolean <i class="fa-solid fa-circle fa-2xs"></i> Classe XX <i class="fa-solid fa-circle fa-2xs"></i> <a href="#">Privacy Policy</a></p>
 
                 </div>
 
