add footer (desktop)

--- a/index.html
+++ b/index.html
@@ -384,15 +384,11 @@
 
         <footer> <!--Inizio Footer-->
 
-            <div class="text">
+            <div class="cont-footer txt-center">
 
-                text
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam quos quo autem. Voluptate.</p>
 
-            </div>
-
-            <div class="text">
-
-                text
+                <p><a href="#">Lorem ipsum</a> lorem ipsum dolor sit amet <a href="#">Boolean Careers</a></p>
 
             </div>
 
