add Media Query (tablet)

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 
                 <nav>
 
+                    <i class="fa-solid fa-bars d-none"></i>
+
                     <ul class="flex">
 
                         <li>
@@ -62,6 +64,8 @@
                     </ul>
 
                 </nav>
+
+
 
             </div>
 
