upgrade html/css

--- a/index.html
+++ b/index.html
@@ -42,23 +42,23 @@
                     <ul class="flex">
 
                         <li>
-                            <a href="#">Planning</a>
+                            <a href="#planning">Planning</a>
                         </li>
 
                         <li>
-                            <a href="#">Testimonials</a>
+                            <a href="#testimonials">Testimonials</a>
                         </li>
 
                         <li>
-                            <a href="#">Features</a>
+                            <a href="#benefits">Features</a>
                         </li>
 
                         <li>
-                            <a href="#">About Us</a>
+                            <a href="#about-us">About Us</a>
                         </li>
 
                         <li>
-                            <a class="button" href="#">Get Started</a>
+                            <a class="button" href="#get-started">Get Started</a>
                         </li>
 
                     </ul>
